# proportional-algo-prototype

./: .gitignore  README.md  app.py  pyproject.toml
proportional_algo_prototype/: algo.py  algorithm_details.py  carousel.py  root.py
